-
Bug
-
Resolution: Done
-
P1: Critical
-
5.4.0 Alpha
-
d50a57f408a9cc160c187c012f51b8fa89738858 23e0e26ce652cf360310ebb1e2de8283502eba2e
As mentioned in QTBUG-28712, the following also leaks in the new QML engine:
import QtQuick 2.2 import QtQuick.Window 2.2 Window { id: top visible: true width: 200; height: 200 color: "white" property variant item Timer { id: timer running: true repeat: true interval: 1 onTriggered: { if(item) item.destroy(); else item = Qt.createQmlObject(' import QtQuick 2.2 Rectangle { width: 100 height: 100 color: "blue" anchors.centerIn: parent function test() { var t="t"; var b = []; } } ', top); } } }
- relates to
-
QTBUG-53761 QML components get automatically cleared from the type cache even if they are still in use
-
- Closed
-
- resulted from
-
QTBUG-28712 Qml doesnt free memory when javascript function is called inside createQmlObject untill application closed.
-
- Closed
-
For Gerrit Dashboard: QTBUG-42055 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
156144,4 | Occasionally trim the type cache | 5.6 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
156165,2 | Drop the class name from shader effect material keys | 5.6 | qt/qtdeclarative | Status: MERGED | +2 | 0 |